# SPIN

./: .gitignore  base_dataset_ffcv.py  classifier.py  config.py  default.conf  eval.py  extract_features.py  extract_features_classification.py  extract_features_pixels.py  load_config.sh  pyproject.toml  requirements.txt  run.sh
datasets/: base_dataset.py  mixed_dataset.py  val_dataset.py
datasets/preprocess/: h36m_train.py
models/: __init__.py  hmr.py  resnet.py  vgg.py
train/: fits_dict.py  trainer.py
utils/: base_trainer.py  imutils.py  renderer.py  saver.py  train_options.py
